ENEX FSL/snapshotDownload (1)/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>AM_PM__c</fullName>
        <label>AM/PM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accion_de_Recuperacion__c</fullName>
        <label>Acción de Recuperación</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Gestion_Cartera__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Visita vendedor</fullName>
                </value>
                <value>
                    <fullName>Re cotización</fullName>
                </value>
                <value>
                    <fullName>Análisis de línea de Crédito</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Llamada</fullName>
                </value>
                <value>
                    <fullName>Envío Correo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Antiguedad__c</fullName>
        <formula>MCEILING(Today() - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Antiguedad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_Generadora__c</fullName>
        <label>Área Generadora</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Ventas</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                    <default>true</default>
                    <label>CSC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auditoria_Comentario__c</fullName>
        <label>Auditoria Comentario</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ayuda_Tarea_o_Reuni_n__c</fullName>
        <defaultValue>&quot;No modificar campo:&quot;&amp;BR()&amp;&quot;-- Relacionado con --&quot;</defaultValue>
        <label>Ayuda TAREA o REUNIÓN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cantidad_de_Flota__c</fullName>
        <label>Cantidad de Flota</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cantidad_de_Tarjetas__c</fullName>
        <label>Cantidad de Tarjetas</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckOutAccuracy__c</fullName>
        <label>Check Out Accuracy (m)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckOutDate__c</fullName>
        <label>Check Out Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CheckOutDistanceFromRecordMi__c</fullName>
        <label>Check Out Distance From Record (mi)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckOutLatitude__c</fullName>
        <label>Check Out Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckOutLongitude__c</fullName>
        <label>Check Out Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_in_date_time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check In Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comentario_de_Cierre__c</fullName>
        <inlineHelpText>Por favor ingresar detalles de cierre de la tarea.</inlineHelpText>
        <label>Comentario de Cierre</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CreatedLatitude__c</fullName>
        <label>Created Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedLocationAccuracy__c</fullName>
        <label>Created Location Accuracy (m)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedLocationVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created Location Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedLongitude__c</fullName>
        <label>Created Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Actividades</relationshipLabel>
        <relationshipName>Actividades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detalle_llamado__c</fullName>
        <label>Detalle llamado</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tipo_de_Contacto__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Antifraude (En evaluación)</fullName>
                </value>
                <value>
                    <fullName>Antifraude (SI fraude)</fullName>
                </value>
                <value>
                    <fullName>Antifraude (NO fraude)</fullName>
                </value>
                <value>
                    <fullName>Capacitación</fullName>
                </value>
                <value>
                    <fullName>Sala de Descanso</fullName>
                </value>
                <value>
                    <fullName>Fidelización</fullName>
                </value>
                <value>
                    <fullName>Contacto sin respuesta</fullName>
                </value>
                <value>
                    <fullName>Línea de Crédito</fullName>
                </value>
                <value>
                    <fullName>Deuda</fullName>
                </value>
                <value>
                    <fullName>Incobrable</fullName>
                </value>
                <value>
                    <fullName>Baja</fullName>
                </value>
                <value>
                    <fullName>Recuperación</fullName>
                </value>
                <value>
                    <fullName>Información pedidos</fullName>
                </value>
                <value>
                    <fullName>Prospectos</fullName>
                </value>
                <value>
                    <fullName>Bienvenida</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>100% Tarjetas sin Consumo</fullName>
                </value>
                <value>
                    <fullName>% Parcial de Tarjetas sin Consumo</fullName>
                </value>
                <value>
                    <fullName>Volumen</fullName>
                </value>
                <value>
                    <fullName>Control Total 2.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DistanceFromRecordMi__c</fullName>
        <label>Distance from Record (mi)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distancia_del_Check_out__c</fullName>
        <formula>CheckOutDistanceFromRecordMi__c * 1600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distancia del Check out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duracion_de_visita__c</fullName>
        <formula>IF( 
( CheckOutDate__c - CreatedDate)&gt; 0 , 
(FLOOR( CheckOutDate__c- CreatedDate) *24*60)+ 
(FLOOR( MOD( (CheckOutDate__c - CreatedDate) * 24, 24 ) ) *60)+ 
(ROUND( MOD( (CheckOutDate__c - CreatedDate) * 24 * 60, 60 ), 0 ) ),0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duración de visita</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Epoca_de_Estacionalidad__c</fullName>
        <label>Epoca de Estacionalidad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Primavera-Verano</fullName>
                </value>
                <value>
                    <fullName>Otoño- Invierno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Es_Recuperable__c</fullName>
        <label>Es Recuperable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Count_of_Events__c</fullName>
        <description>Count of all events</description>
        <formula>IF( IsTask,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Recuento de todos los eventos</inlineHelpText>
        <label>Count of Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Count_of_Tasks__c</fullName>
        <formula>IF( IsTask,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service Appointment</fullName>
                </value>
                <value>
                    <fullName>Resource Absence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_Asignado__c</fullName>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F Asignado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_Hora_Cierre__c</fullName>
        <label>Fecha / Hora Cierre</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_Hora_Vencimiento_Copia__c</fullName>
        <label>Fecha / Hora Vencimiento Copia</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_Hora_Vencimiento_del__c</fullName>
        <label>Fecha / Hora Vencimiento</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_de_Pr_xima_Acci_n__c</fullName>
        <label>Fecha de Próxima Acción</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funci_n_Creador__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <label>Función Creador Actividad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gestion_Cartera__c</fullName>
        <label>Gestión Cartera</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activo</fullName>
                </value>
                <value>
                    <fullName>En Riesgo</fullName>
                </value>
                <value>
                    <fullName>Perdido</fullName>
                </value>
                <value>
                    <fullName>Prospectos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HH__c</fullName>
        <label>HH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MM__c</fullName>
        <label>MM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monto_Deuda__c</fullName>
        <label>Monto Deuda</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_Factura__c</fullName>
        <label>N° Factura</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_de_OC__c</fullName>
        <label>N° de OC</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Vendedor__c</fullName>
        <label>Nombre Vendedor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>* P02 - Carlos Aguirre</fullName>
                </value>
                <value>
                    <fullName>* P03 - Rodrigo Andrade</fullName>
                </value>
                <value>
                    <fullName>* P04 - Juan huerta</fullName>
                    <label>* P04 - Juan Huerta</label>
                </value>
                <value>
                    <fullName>* P05 - Gabriel Laborié</fullName>
                </value>
                <value>
                    <fullName>* P06 - Joaquin Muñoz</fullName>
                </value>
                <value>
                    <fullName>* P07 - Ernesto Villena</fullName>
                </value>
                <value>
                    <fullName>* P08 - Cristian Cuevas</fullName>
                </value>
                <value>
                    <fullName>* P09 - Robinson Montero</fullName>
                </value>
                <value>
                    <fullName>* P10 - Victor Hugo</fullName>
                    <label>* P10 - Victor Hugo Teuber</label>
                </value>
                <value>
                    <fullName>* P11 - Claudio Vasquez</fullName>
                </value>
                <value>
                    <fullName>* P12 - Anibal Gonzalez</fullName>
                </value>
                <value>
                    <fullName>* P13 - Elías Calderón</fullName>
                </value>
                <value>
                    <fullName>* P14 - Miguel Angel Chang</fullName>
                </value>
                <value>
                    <fullName>* P15 - Jose Alveal</fullName>
                </value>
                <value>
                    <fullName>* P16 - John Llanos</fullName>
                </value>
                <value>
                    <fullName>* P17 - Nelson Gonzalez</fullName>
                </value>
                <value>
                    <fullName>* P18 - Roberto Casanova</fullName>
                </value>
                <value>
                    <fullName>* P19 - Cristian Santander</fullName>
                </value>
                <value>
                    <fullName>* P20 - Gonzalo Muñoz</fullName>
                </value>
                <value>
                    <fullName>* P21 - Javier Valenzuela</fullName>
                </value>
                <value>
                    <fullName>* P22 - José Miguel Solano</fullName>
                </value>
                <value>
                    <fullName>- Adrián Milla</fullName>
                    <isActive>false</isActive>
                    <label>- Adrián Milla</label>
                </value>
                <value>
                    <fullName>- Javier Rojas</fullName>
                    <isActive>false</isActive>
                    <label>- Javier Rojas</label>
                </value>
                <value>
                    <fullName>- Jorge Cardenas</fullName>
                    <isActive>false</isActive>
                    <label>- Jorge Cardenas</label>
                </value>
                <value>
                    <fullName>- Jose Antonio Infante</fullName>
                    <isActive>false</isActive>
                    <label>- Jose Antonio Infante</label>
                </value>
                <value>
                    <fullName>Ejecutiva TMK</fullName>
                    <isActive>false</isActive>
                    <label>Ejecutiva TMK</label>
                </value>
                <value>
                    <fullName>Jefe de Zona</fullName>
                    <isActive>false</isActive>
                    <label>Jefe de Zona</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proxima_Accion__c</fullName>
        <label>Próxima Acción</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Visita Vendedor</fullName>
                </value>
                <value>
                    <fullName>Recotización</fullName>
                </value>
                <value>
                    <fullName>Análisis de Línea de Crédito</fullName>
                </value>
                <value>
                    <fullName>Llamada</fullName>
                </value>
                <value>
                    <fullName>Envío Correo</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Razon_de_Perdido__c</fullName>
        <label>Razón de Perdido*</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Gestion_Cartera__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Crédito</fullName>
                </value>
                <value>
                    <fullName>Deuda</fullName>
                </value>
                <value>
                    <fullName>Estacionalidad</fullName>
                </value>
                <value>
                    <fullName>Falta de cobertura</fullName>
                </value>
                <value>
                    <fullName>Mal servicio entregado</fullName>
                </value>
                <value>
                    <fullName>Migración de Producto</fullName>
                </value>
                <value>
                    <fullName>Otra Razón Social</fullName>
                </value>
                <value>
                    <fullName>Precio</fullName>
                </value>
                <value>
                    <fullName>Quiebra</fullName>
                </value>
                <value>
                    <fullName>Siniestrado</fullName>
                </value>
                <value>
                    <fullName>Término de faena</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responder_solo_si_Razon_Perdido_es_Otro__c</fullName>
        <label>Responder sólo si Razón Perdido es Otro</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tipo_Gesti_n_Cobranza_Lubricantes__c</fullName>
        <label>Tipo Gestión Cobranza Lubricantes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abono</fullName>
                </value>
                <value>
                    <fullName>Cheque en Cartera</fullName>
                </value>
                <value>
                    <fullName>Cheque en Tesorería</fullName>
                </value>
                <value>
                    <fullName>Cheque Retirado</fullName>
                </value>
                <value>
                    <fullName>Compromiso Cliente</fullName>
                </value>
                <value>
                    <fullName>Compromiso JJZZ</fullName>
                </value>
                <value>
                    <fullName>Compromiso vendedor</fullName>
                </value>
                <value>
                    <fullName>Consulta JJZZ</fullName>
                </value>
                <value>
                    <fullName>Consulta Tesorería</fullName>
                </value>
                <value>
                    <fullName>Consulta Vendedor</fullName>
                </value>
                <value>
                    <fullName>Estado de Cuenta</fullName>
                </value>
                <value>
                    <fullName>Fono fuera de servicio</fullName>
                </value>
                <value>
                    <fullName>Llamar nuevamente</fullName>
                </value>
                <value>
                    <fullName>NC pendiente</fullName>
                </value>
                <value>
                    <fullName>No cumple compromiso</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Pago</fullName>
                </value>
                <value>
                    <fullName>Pago disponible</fullName>
                </value>
                <value>
                    <fullName>Prejudicial</fullName>
                </value>
                <value>
                    <fullName>Sin respuesta telefónica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Contacto__c</fullName>
        <label>Tipo de Contacto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fidelización</fullName>
                </value>
                <value>
                    <fullName>Crédito</fullName>
                </value>
                <value>
                    <fullName>Volumen</fullName>
                </value>
                <value>
                    <fullName>FEX</fullName>
                </value>
                <value>
                    <fullName>Bienvenida</fullName>
                </value>
                <value>
                    <fullName>SoW</fullName>
                </value>
                <value>
                    <fullName>Antifraude</fullName>
                    <isActive>false</isActive>
                    <label>Antifraude</label>
                </value>
                <value>
                    <fullName>Capacitación</fullName>
                    <isActive>false</isActive>
                    <label>Capacitación</label>
                </value>
                <value>
                    <fullName>Cliente a recuperar</fullName>
                    <isActive>false</isActive>
                    <label>Cliente a recuperar</label>
                </value>
                <value>
                    <fullName>Contacto Sin Respuesta</fullName>
                    <isActive>false</isActive>
                    <label>Contacto Sin Respuesta</label>
                </value>
                <value>
                    <fullName>Correo envío de información</fullName>
                    <isActive>false</isActive>
                    <label>Correo envío de información</label>
                </value>
                <value>
                    <fullName>Correo solicitud de información</fullName>
                    <isActive>false</isActive>
                    <label>Correo solicitud de información</label>
                </value>
                <value>
                    <fullName>Deuda – Incobrable</fullName>
                    <isActive>false</isActive>
                    <label>Deuda – Incobrable</label>
                </value>
                <value>
                    <fullName>Información de pedido FEX</fullName>
                    <isActive>false</isActive>
                    <label>Información de pedido FEX</label>
                </value>
                <value>
                    <fullName>Llamada Cliente Con Deuda</fullName>
                    <isActive>false</isActive>
                    <label>Llamada Cliente Con Deuda</label>
                </value>
                <value>
                    <fullName>Llamada Cliente perdido</fullName>
                    <isActive>false</isActive>
                    <label>Llamada Cliente perdido</label>
                </value>
                <value>
                    <fullName>Llamada Incobrable</fullName>
                    <isActive>false</isActive>
                    <label>Llamada Incobrable</label>
                </value>
                <value>
                    <fullName>Llamada Pago</fullName>
                    <isActive>false</isActive>
                    <label>Llamada Pago</label>
                </value>
                <value>
                    <fullName>Llamada Recuperación Cliente</fullName>
                    <isActive>false</isActive>
                    <label>Llamada Recuperación Cliente</label>
                </value>
                <value>
                    <fullName>Llamada de Mantención</fullName>
                    <isActive>false</isActive>
                    <label>Llamada de Mantención</label>
                </value>
                <value>
                    <fullName>Llamada de Presentación</fullName>
                    <isActive>false</isActive>
                    <label>Llamada de Presentación</label>
                </value>
                <value>
                    <fullName>Sala de Descanso</fullName>
                    <isActive>false</isActive>
                    <label>Sala de Descanso</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Gestion__c</fullName>
        <label>Tipo de Gestión</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Llamada de salida</fullName>
                </value>
                <value>
                    <fullName>Llamada entrante</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>chqin__Check_In_Distance__c</fullName>
        <label>Check In Distance</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chqin__Check_In_Location__c</fullName>
        <label>Check-In Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chqin__Check_In_Time__c</fullName>
        <label>Check-In Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chqin__Check_Out_Distance__c</fullName>
        <label>Check Out Distance</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chqin__Check_Out_Location__c</fullName>
        <label>Check-Out Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chqin__Check_Out_Time__c</fullName>
        <label>Check-Out Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chqin__CheckinStatus__c</fullName>
        <label>Checkin Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check-in</fullName>
                </value>
                <value>
                    <fullName>Check-out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>chqin__Locate_Mobile_Phone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Locate Mobile Phone</label>
        <referenceTo>chqin__Locate_Mobile_Phone__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>